# hpcuqtraining

./: README.md  README.rst  requirements.txt  requirements.yml
.circleci/: build_slides.sh  config.yml  run_Notebooks.sh  run_docker_linux.sh
2018/Scripts/: TP1_Uncertainty_Quantification.ipynb  TP2_wrapper_Central_dispersion.ipynb  TP2_wrapper_Central_dispersion_otwrapy.ipynb  TP3_Rare_event_bonus.ipynb  TP3_Rare_event_bonus_2.ipynb  TP4_Cantilever_beam_polynomial_chaos.ipynb  TP4b_Kriging.ipynb  loadLevel_script
2018/TP/: TP3_Rare_event.ipynb
2018/TP/beam/src/: Makefile  (+1 more)
2019/Scripts/: TP1_Uncertainty_Quantification.ipynb  TP2_wrapper_Central_dispersion.ipynb  TP2_wrapper_Central_dispersion_otwrapy.ipynb  TP3_Rare_event.ipynb  TP3_Rare_event.py  TP3_Rare_event_bonus_2.ipynb  TP4_Cantilever_beam_polynomial_chaos.ipynb  TP4b_Kriging.ipynb  wrapper.py
2019/Slides/: 01. PRACE_D1 - IntroStage.ppt  ProgrammeHPC_Incert_EnglishVersion_2019.doc
2019/TP/: TP3_Rare_event_bonus.ipynb
2020/: Training-2020-Roadmap.rst
2020/Courses/Calibration/: Calibration_PRACE_english.tex  macros.tex
2020/Courses/Intro/: 1-PRACE_D1-IntroStage.ppt
2020/Courses/Probability/: PRACE_D1_Probability_theory_basics.pptx  (+1 more)
2020/Programme/: .~lock.ProgrammePRACE_HPC_Uncertainty_2020.odt#  ProgrammePRACE_HPC_Uncertainty_2020.odt
2020/Scripts/: TODO.txt
2020/Scripts/Central_tendency/beam/src/: CMakeLists.txt  beam.cpp
2020/Scripts/Central_tendency/beam/src/html/: index.html
2020/Scripts/Central_tendency/beam/src/html/search/: classes_62.html
2021/: Training-2021-Roadmap.rst
2021/Programme/: ProgrammePRACE_HPC_Uncertainty_2021.odt
2021/Scripts/: TODO.txt
2022/: Training-2022-Roadmap.rst
2022/Quizzes/: Quizz_day3.txt
2022/programme/: PRACE_HPC_Uncertainty_Treatment_description.odt  ProgrammePRACE_HPC_Uncertainty_2022.odt
tests/: find-ipynb-files.py
(+213 files in other folders)
